1. 支持7.0以上ROM的播放录音。不能直接用file:///的uri了；2. 彻底解决点开后白屏，设置透明却又有bug（切换app或者切换到后台时，会闪一下）的问题：解法是：设置window的背景为闪屏内容，by the way，window背景设置为图片后，其他view的背景就不能设置为windowBackground，因为这不是color，是图片。

--- a/app/build.gradle
+++ b/app/build.gradle
@@ -72,9 +72,9 @@ dependencies {
     // api 'org.greenrobot:eventbus:3.1.1'
 
     // 腾讯push 和 信鸽  但这个信鸽没卵用，两个月前在语音指令app上成功过，后来再也不行了
-    api 'com.tencent.tac:tac-core:1.2.+'
-    api 'com.tencent.tac:tac-crash:1.2.+'
-    api 'com.tencent.tac:tac-messaging:1.2.+'
+    api 'com.tencent.tac:tac-core:1.2.0'
+    api 'com.tencent.tac:tac-crash:1.2.0'
+    // api 'com.tencent.tac:tac-messaging:1.2.0'
 }
 
 
