--- a/app/build.gradle
+++ b/app/build.gradle
@@ -20,6 +20,12 @@ android {
 
         vectorDrawables.useSupportLibrary = true
 
+//        javaCompileOptions {
+//            annotationProcessorOptions {
+//                arguments = [eventBusIndex: 'com.bandeng.MyEventBusIndex']
+//            }
+//        }
+
         // Define your application name here.
         // It must neither be present in /res/values/strings.xml
         // nor in /res/values/string_no_translate.xml
@@ -53,7 +59,7 @@ android {
 }
 
 dependencies {
-    compile fileTree(dir: 'libs', include: '*.jar')
+    api fileTree(dir: 'libs', include: '*.jar', exclude: "eventbus-annotation-processor-*.jar")
     implementation 'com.android.support:support-v4:26.1.0'
     implementation 'com.android.support:appcompat-v7:26.1.0'
     implementation 'com.android.support:recyclerview-v7:26.1.0'
@@ -75,6 +81,9 @@ dependencies {
     api 'com.tencent.tac:tac-core:1.2.0'
     api 'com.tencent.tac:tac-crash:1.2.0'
     // api 'com.tencent.tac:tac-messaging:1.2.0'
+    annotationProcessor 'com.squareup:javapoet:1.7.0'
+    annotationProcessor fileTree(dir: 'libs', include: "*.jar")
+    // annotationProcessor 'org.greenrobot:eventbus-annotation-processor:3.0.1'
 }
 
 
